drug cell is marked according to drug existance is db

--- a/admin.html
+++ b/admin.html
@@ -9,6 +9,7 @@
     <!-- Mermaid -->
     <script src="https://unpkg.com/mermaid@9.4.3/dist/mermaid.min.js"></script>
     <script>mermaid.initialize({ startOnLoad: false });</script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-gray-100">
     <div class="container mx-auto px-4 py-6">
@@ -170,6 +171,44 @@
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const db = getFirestore(app);
+
+
+        /* ───────── DRUG-NAME VALIDATION ───────── */
+
+        // simple memo so we never hit Firestore twice for the same name
+        const drugCache = new Map();
+
+        /**
+         * Query Firestore once and remember the result.
+         * Returns a Promise<boolean>.
+         */
+        function drugExists(name) {
+            if (drugCache.has(name)) return drugCache.get(name);
+            console.log("drugExists: in cache")
+
+            const p = getDoc(doc(db, 'drugs', name))
+                .then(snap => snap.exists())
+                .catch(() => false);             // network / perm error → “missing”
+            drugCache.set(name, p);
+            console.log("drugExists: p")
+            return p;
+        }
+
+        // ---------------- Drug-name colour helper ----------------
+        async function paintDrugInput(inputEl) {
+            const name = inputEl.value.trim();
+
+            // scrub any previous colours
+            inputEl.classList.remove('bg-emerald-100', 'bg-rose-100');
+
+            if (!name) return;                       // nothing to validate
+
+            (await drugExists(name))
+                ? inputEl.classList.add('bg-emerald-100')   // light green = exists
+                : inputEl.classList.add('bg-rose-100');     // light red   = missing
+        }
+
+
 
         /* ------------------------------ UI -------------------------------- */
         const signInBtn = document.getElementById('sign-in-btn');
@@ -403,13 +442,13 @@
                 const table = document.createElement('table');
                 table.className = 'table-auto w-full border-collapse';
                 table.innerHTML = `<thead><tr class='bg-gray-50'>
-                                                <th class='border px-2 py-1'>ID</th>
-                                                <th class='border px-2 py-1'>Name</th>
-                                                <th class='border px-2 py-1'>Text</th>
-                                                <th class='border px-2 py-1'>Result</th>
-                                                <th class='border px-2 py-1'>Options (JSON)</th>
-                                                <th class='border px-2 py-1'>Remove</th>
-                                            </tr></thead>`;
+                                                    <th class='border px-2 py-1'>ID</th>
+                                                    <th class='border px-2 py-1'>Name</th>
+                                                    <th class='border px-2 py-1'>Text</th>
+                                                    <th class='border px-2 py-1'>Result</th>
+                                                    <th class='border px-2 py-1'>Options (JSON)</th>
+                                                    <th class='border px-2 py-1'>Remove</th>
+                                                </tr></thead>`;
                 const tbody = document.createElement('tbody');
                 Object.entries(data.scenarios || {}).forEach(([id, sc]) => {
                     const tr = document.createElement('tr');
@@ -500,11 +539,11 @@
                 function updateField(sid, key, value) { const full = JSON.parse(storyJsonArea.value); full.scenarios[sid][key] = value; storyJsonArea.value = JSON.stringify(full, null, 2); }
             }
 
-           /**
-             * Builds a <td> with:
-             *  - “Edit…” button
-             *  - hidden .options-editor panel
-             */
+            /**
+              * Builds a <td> with:
+              *  - “Edit…” button
+              *  - hidden .options-editor panel
+              */
             function createOptionsCell(sid, optionsArr) {
                 const td = document.createElement('td');
                 td.className = 'border px-2 py-1 align-top';
@@ -533,9 +572,9 @@
             }
 
             /**
- * Renders the list of option rows inside the given panel.
- * Hooks up add/remove and value-change callbacks.
- */
+* Renders the list of option rows inside the given panel.
+* Hooks up add/remove and value-change callbacks.
+*/
             function renderOptionsEditor(sid, panel) {
                 // clear
                 panel.innerHTML = '';
@@ -550,15 +589,15 @@
                 const tbl = document.createElement('table');
                 tbl.className = 'w-full mb-2';
                 tbl.innerHTML = `
-    <thead class="text-left text-sm text-gray-600">
-    <tr>
-      <th class="py-1">Text</th>
-      <th class="py-1">Id</th>
-      <th class="py-1">Drug</th>
-      <th></th>
-    </tr>
-  </thead>
-  `;
+        <thead class="text-left text-sm text-gray-600">
+        <tr>
+          <th class="py-1">Text</th>
+          <th class="py-1">Id</th>
+          <th class="py-1">Drug</th>
+          <th></th>
+        </tr>
+      </thead>
+      `;
                 const tbody = document.createElement('tbody');
                 tbl.append(tbody);
                 panel.append(tbl);
@@ -616,8 +655,12 @@
                         inpDrug.oninput = () => {
                             o.drugName = inpDrug.value;
                             pushJson();
+                            paintDrugInput(inpDrug); 
                         };
+                        inpDrug.addEventListener('blur', () => paintDrugInput(inpDrug)); // extra safety
+
                         tdDrug.append(inpDrug);
+                        paintDrugInput(inpDrug);
                         tr.append(tdDrug);
 
 
@@ -862,46 +905,46 @@
 
             // 3️⃣ Build the LLM prompt (use your template here)
             const prompt = `
-                        You are an assistant that generates interactive case-study stories for medical students, helping them learn the correct treatment pathways.
-                        These stories are represented as JSON following our established schema. Here is an example of an existing story (for reference):
-                        \`\`\`
-                        ${exampleJson}
-                        \`\`\`
+                            You are an assistant that generates interactive case-study stories for medical students, helping them learn the correct treatment pathways.
+                            These stories are represented as JSON following our established schema. Here is an example of an existing story (for reference):
+                            \`\`\`
+                            ${exampleJson}
+                            \`\`\`
 
-                        Using this schema:
+                            Using this schema:
 1. **Top-level keys** in order:
-           - title (string)
-           - status (string - initial value: draft)
-           - createdAt, updatedAt (timestamp objects)
-           - scenarios (object of scenario-objects)
-           - drugInfo (object of drug-info objects)
-           - summary (object with a “points” array)
-           - quiz (object with a “choices” array)
+               - title (string)
+               - status (string - initial value: draft)
+               - createdAt, updatedAt (timestamp objects)
+               - scenarios (object of scenario-objects)
+               - drugInfo (object of drug-info objects)
+               - summary (object with a “points” array)
+               - quiz (object with a “choices” array)
 
 2. **Each scenario** must have keys in this order:
-           - name (string)
-           - text (string)
-           - pathResult (string. one of the values:
-                undetermined - for paths still in progress,
-                success - for paths ending positively,
-                failure - for paths ending negatively)
-           - options (array of option-objects)
+               - name (string)
+               - text (string)
+               - pathResult (string. one of the values:
+                    undetermined - for paths still in progress,
+                    success - for paths ending positively,
+                    failure - for paths ending negatively)
+               - options (array of option-objects)
 
 3. **Each option** must have:
-           - text (string)
-           - id (string matching one of the scenario keys)
-           - drugName(string, the name of the chosen drug if this option represents a drug choice)
+               - text (string)
+               - id (string matching one of the scenario keys)
+               - drugName(string, the name of the chosen drug if this option represents a drug choice)
 
 4. **Each drugInfo** must have:
 
-           - Family (string representing the Family of drugs the drug belongs to)
-           - PK (string)
-           - Spectrum (string)
-           - Toxicities (string)
+               - Family (string representing the Family of drugs the drug belongs to)
+               - PK (string)
+               - Spectrum (string)
+               - Toxicities (string)
 
 5. **Mermaid compliance**:
-           - Scenario IDs become graph node IDs.
-           - Option texts must be short, single-line labels without unsupported Unicode.
+               - Scenario IDs become graph node IDs.
+               - Option texts must be short, single-line labels without unsupported Unicode.
 
 ** There always must be an OPT0 scenario which is the starting point**
 ** Scenario with pathResult=success must always have an empty options array**
@@ -911,8 +954,8 @@
 **Now** create a **brand new interactive case-study story JSON** with:
 - **Title** based on: Subject: ${subject} and on Additional instructions (if any): ${instr || 'none'}
 
-                        Output **only** the new story’s JSON, ready for Mermaid rendering.
-                          `.trim();
+                            Output **only** the new story’s JSON, ready for Mermaid rendering.
+                              `.trim();
 
             // 4️⃣ UI feedback
             spinner.classList.remove('hidden');
